user-data => userData

--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -62,6 +62,10 @@
     "friends": {
       "via": "user",
       "collection": "friend"
+    },
+    "userData": {
+      "via": "user",
+      "model": "user-data"
     }
   }
 }
