--- a/api/user-data/models/user-data.settings.json
+++ b/api/user-data/models/user-data.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "user_data",
   "info": {
-    "name": "userData"
+    "name": "userData",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -43,7 +44,8 @@
     },
     "user": {
       "plugin": "users-permissions",
-      "model": "user"
+      "model": "user",
+      "via": "userData"
     }
   }
 }
